# yew-sidebar

./: .gitignore  Cargo.toml  README.md  index.html  tailwind-fb07f9dabeb6fb6c.css  yew-sidebar-466dde3f0de5f15c.js  yew-sidebar-466dde3f0de5f15c_bg.wasm
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
src/app/: about.rs  home.rs  mod.rs
src/components/: sidebar.rs
src/store/: mod.rs
tests/: web.rs
